Fix bug on small screen size
The navigation button overlays the bottom part of the
card containers, resulting in the bottom card not displaying
fully. Also, fix the bug where when only one or no card is displayed
there is a large white space between the header and the card container.

--- a/src/output.css
+++ b/src/output.css
@@ -605,10 +605,6 @@ video {
   margin-right: auto;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -911,6 +907,14 @@ video {
     z-index: 50;
   }
 
+  .custom-sm\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .custom-sm\:mb-2 {
+    margin-bottom: 0.5rem;
+  }
+
   .custom-sm\:flex {
     display: flex;
   }
@@ -921,10 +925,6 @@ video {
 
   .custom-sm\:flex-row {
     flex-direction: row;
-  }
-
-  .custom-sm\:flex-col-reverse {
-    flex-direction: column-reverse;
   }
 
   .custom-sm\:justify-center {
@@ -951,6 +951,18 @@ video {
   .custom-sm\:bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
+  }
+
+  .custom-sm\:pb-\[4rem\] {
+    padding-bottom: 4rem;
+  }
+
+  .custom-sm\:pb-\[5rem\] {
+    padding-bottom: 5rem;
+  }
+
+  .custom-sm\:pb-3 {
+    padding-bottom: 0.75rem;
   }
 
   .custom-sm\:align-middle {
